# itpa-imas-migration

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: migration.md  migration_data_logbook.md
notebooks/: 2008_analysis.ipynb  2008_selec2007_per_machine_scaling.ipynb  TC-26_analysis.ipynb  _simdb_common.py  hmode_analysis.ipynb  hmode_variance_attribution.ipynb  original_data.ipynb  selec_bt_ip_comparison.ipynb  threshold_variance_attribution.ipynb
resources/mappings/: 2008_crosswalk.xlsx  TC26_crosswalk.xlsx  h_mode_crosswalk.xlsx
resources/mappings/csv/: 2008_crosswalk.csv  TC26_crosswalk.csv  h_mode_crosswalk.csv
src/itpa_imas_migration/: __init__.py  generate_crosswalk.py  idsmigration.py  profile_dataset.py
